force-app/main/default/objects/Patient__c/fields/Admission_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Admission_DateTime__c</fullName>
    <label>Admission DateTime</label>
    <type>DateTime</type>
</CustomField>