force-app/main/default/objects/Patient__c/fields/ADS_ID__c.field-meta.xml
<CustomField>
    <fullName>ADS_ID__c</fullName>
    <label>ADS_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>