force-app/main/default/objects/Patient__c/fields/Anticipated_Discharge_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Discharge_Date__c</fullName>
    <label>Anticipated Discharge Date</label>
    <type>Date</type>
</CustomField>