force-app/main/default/objects/Patient__c/fields/Appointment_Time_In_Text__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Time_In_Text__c</fullName>
    <label>Appointment Time In Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>