force-app/main/default/objects/Patient__c/fields/Appointment_Today__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Today__c</fullName>
    <formula>datevalue( Appointment_Date_Time__c ) = today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment Today</label>
    <type>Checkbox</type>
</CustomField>