force-app/main/default/objects/Patient__c/fields/AWV__c.field-meta.xml
<CustomField>
    <fullName>AWV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AWV</label>
    <type>Checkbox</type>
</CustomField>