force-app/main/default/objects/Patient__c/fields/BIM_Score__c.field-meta.xml
<CustomField>
    <fullName>BIM_Score__c</fullName>
    <label>BIM Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>