force-app/main/default/objects/Patient__c/fields/BIM_Score_Id__c.field-meta.xml
<CustomField>
    <fullName>BIM_Score_Id__c</fullName>
    <formula>TEXT(BIM_Score__c) &amp; &quot; - &quot; &amp; CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BIM Score Id</label>
    <type>Text</type>
</CustomField>