force-app/main/default/objects/Patient__c/fields/Blood_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Blood_Pressure__c</fullName>
    <label>Blood Pressure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>