force-app/main/default/objects/Patient__c/fields/Blood_Sugar__c.field-meta.xml
<CustomField>
    <fullName>Blood_Sugar__c</fullName>
    <label>Blood Sugar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>