force-app/main/default/objects/Patient__c/fields/Call_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Call_Outcome__c</fullName>
    <label>Call Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Left Voicemail</fullName>
            </value>
            <value>
                <fullName>Requested Call Back</fullName>
            </value>
            <value>
                <fullName>Agreed to Services</fullName>
            </value>
            <value>
                <fullName>Refused Services</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Readmitted</fullName>
            </value>
            <value>
                <fullName>Unable to Leave Voicemail (VM Not Setup)</fullName>
            </value>
            <value>
                <fullName>Unable to Leave Voicemail (VM Full)</fullName>
            </value>
            <value>
                <fullName>Unable to Reach (Wrong Number)</fullName>
            </value>
            <value>
                <fullName>Unable to Reach (No Number)</fullName>
            </value>
            <value>
                <fullName>Unable to Service Patient (Insurance Not Eligible)</fullName>
            </value>
            <value>
                <fullName>Unable to Service Patient (Alternate Services In Place)</fullName>
            </value>
            <value>
                <fullName>Unable to Service Patient (Hospice)</fullName>
            </value>
            <value>
                <fullName>Unable to Service Patient (Out of State)</fullName>
            </value>
            <value>
                <fullName>No Access to Facesheet</fullName>
            </value>
            <value>
                <fullName>Inpatient</fullName>
            </value>
            <value>
                <fullName>Unable To Reach</fullName>
                <isActive>false</isActive>
                <label>Unable To Reach</label>
            </value>
            <value>
                <fullName>Unable to Leave Voicemail</fullName>
                <isActive>false</isActive>
                <label>Unable to Leave Voicemail</label>
            </value>
            <value>
                <fullName>Unable to Service Patient</fullName>
                <isActive>false</isActive>
                <label>Unable to Service Patient</label>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
                <isActive>false</isActive>
                <label>Wrong Number</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>