force-app/main/default/objects/Patient__c/fields/Can_Consent_To_Services__c.field-meta.xml
<CustomField>
    <fullName>Can_Consent_To_Services__c</fullName>
    <label>Can Consent To Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>