force-app/main/default/objects/Patient__c/fields/Closed_Won_By__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closed Won By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>