force-app/main/default/objects/Patient__c/fields/COCM_Eligible__c.field-meta.xml
<CustomField>
    <fullName>COCM_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>COCM Eligible</label>
    <type>Checkbox</type>
</CustomField>