force-app/main/default/objects/Patient__c/fields/Code_Status__c.field-meta.xml
<CustomField>
    <fullName>Code_Status__c</fullName>
    <label>Code Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DNR</fullName>
            </value>
            <value>
                <fullName>Full Code</fullName>
            </value>
            <value>
                <fullName>DNR- Comfort Care- Arrest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>