force-app/main/default/objects/Patient__c/fields/Community_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Community_Eligible__c</fullName>
    <formula>if(
and(
or(
 Latest_Payer_Verification_Scenario__c = &quot;Has Medicare Advantage&quot;,
 Latest_Payer_Verification_Scenario__c = &quot;Commercial&quot;,
 Latest_Payer_Verification_Scenario__c = &quot;Straight Medicare B&quot;),
 contains(lower(Latest_Discharge__r.To_From_Location__c), &quot;home&quot;)),
true,
false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Community Eligible</label>
    <type>Checkbox</type>
</CustomField>