force-app/main/default/objects/Patient__c/fields/Community_Gehrimed_Id__c.field-meta.xml
<CustomField>
    <fullName>Community_Gehrimed_Id__c</fullName>
    <label>Community Gehrimed Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>