force-app/main/default/objects/Patient__c/fields/Community_Gehrimed_Lookup_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Community_Gehrimed_Lookup_DateTime__c</fullName>
    <label>Community Gehrimed Lookup DateTime</label>
    <type>DateTime</type>
</CustomField>