force-app/main/default/objects/Patient__c/fields/Community_Patient__c.field-meta.xml
<CustomField>
    <fullName>Community_Patient__c</fullName>
    <formula>IF(NOT(ISBLANK( TEXT(Community_Status__c ))), true,false)</formula>
    <label>Community Patient</label>
    <type>Checkbox</type>
</CustomField>