force-app/main/default/objects/Patient__c/fields/Community_Provider__c.field-meta.xml
<CustomField>
    <fullName>Community_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community Provider</label>
    <referenceTo>Community_Provider__c</referenceTo>
    <relationshipLabel>Patients</relationshipLabel>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>