force-app/main/default/objects/Patient__c/fields/Community_Status_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Community_Status_Updated_Date__c</fullName>
    <formula>datevalue( Community_Status_Updated_Date_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Community Status Updated Date</label>
    <type>Date</type>
</CustomField>