force-app/main/default/objects/Patient__c/fields/Community_Thoroughcare_ID__c.field-meta.xml
<CustomField>
    <fullName>Community_Thoroughcare_ID__c</fullName>
    <label>Community Thoroughcare ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>