force-app/main/default/objects/Patient__c/fields/Conduit_ID__c.field-meta.xml
<CustomField>
    <fullName>Conduit_ID__c</fullName>
    <label>Conduit Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>