force-app/main/default/objects/Patient__c/fields/Consent_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Consent_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FE User who approved consent</description>
    <label>Consent Approved By</label>
    <referenceTo>Front_End_User__c</referenceTo>
    <relationshipLabel>Patients</relationshipLabel>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>