force-app/main/default/objects/Patient__c/fields/Consent_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Consent_Datetime__c</fullName>
    <label>Consent Datetime</label>
    <type>DateTime</type>
</CustomField>