force-app/main/default/objects/Patient__c/fields/Consent_NOK_Name__c.field-meta.xml
<CustomField>
    <fullName>Consent_NOK_Name__c</fullName>
    <label>Consent NOK Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>