force-app/main/default/objects/Patient__c/fields/Consent_NOK_Relation__c.field-meta.xml
<CustomField>
    <fullName>Consent_NOK_Relation__c</fullName>
    <description>it Contain Consent Relation Name</description>
    <label>Consent NOK Relation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>