force-app/main/default/objects/Patient__c/fields/Consent_Status__c.field-meta.xml
<CustomField>
    <fullName>Consent_Status__c</fullName>
    <label>Consent Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Approved - Verbal</fullName>
            </value>
            <value>
                <fullName>Approved - NOK</fullName>
            </value>
            <value>
                <fullName>Approved - NOK Verbal</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Denied - NOK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>