force-app/main/default/objects/Patient__c/fields/Count_of_Calls__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Calls__c</fullName>
    <label>Count of Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>