force-app/main/default/objects/Patient__c/fields/Count_of_Initial_VIsits__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Initial_VIsits__c</fullName>
    <label>Count of Initial Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>