force-app/main/default/objects/Patient__c/fields/Create_In_Gehrimed__c.field-meta.xml
<CustomField>
    <fullName>Create_In_Gehrimed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create In Gehrimed</label>
    <type>Checkbox</type>
</CustomField>