force-app/main/default/objects/Patient__c/fields/Created_By_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created By Trigger</label>
    <type>Checkbox</type>
</CustomField>