force-app/main/default/objects/Patient__c/fields/Date_Add_To_Gehrimed__c.field-meta.xml
<CustomField>
    <fullName>Date_Add_To_Gehrimed__c</fullName>
    <label>Date Add To Gehrimed</label>
    <type>Date</type>
</CustomField>