force-app/main/default/objects/Patient__c/fields/Date_Added_to_Community_Thoroughcare__c.field-meta.xml
<CustomField>
    <fullName>Date_Added_to_Community_Thoroughcare__c</fullName>
    <label>Date Added to Community Thoroughcare</label>
    <type>Date</type>
</CustomField>