force-app/main/default/objects/Patient__c/fields/Date_Added_To_Gehrimed__c.field-meta.xml
<CustomField>
    <fullName>Date_Added_To_Gehrimed__c</fullName>
    <label>Date Added To Gehrimed</label>
    <type>DateTime</type>
</CustomField>