force-app/main/default/objects/Patient__c/fields/Date_Added_To_Thoroughcare__c.field-meta.xml
<CustomField>
    <fullName>Date_Added_To_Thoroughcare__c</fullName>
    <label>Date Added To Thoroughcare</label>
    <type>Date</type>
</CustomField>