force-app/main/default/objects/Patient__c/fields/Date_Address_Phone_Updated__c.field-meta.xml
<CustomField>
    <fullName>Date_Address_Phone_Updated__c</fullName>
    <label>Date Address Phone Updated</label>
    <type>Date</type>
</CustomField>