force-app/main/default/objects/Patient__c/fields/Date_Eligible_For_Another_Initial_Visit__c.field-meta.xml
<CustomField>
    <fullName>Date_Eligible_For_Another_Initial_Visit__c</fullName>
    <label>Date Eligible For Another Initial Visit</label>
    <type>Date</type>
</CustomField>