force-app/main/default/objects/Patient__c/fields/Date_Insurance_Added_To_Thoroughcare__c.field-meta.xml
<CustomField>
    <fullName>Date_Insurance_Added_To_Thoroughcare__c</fullName>
    <label>Date Insurance Added To Thoroughcare</label>
    <type>Date</type>
</CustomField>