force-app/main/default/objects/Patient__c/fields/Date_Referred_To_Brightwell__c.field-meta.xml
<CustomField>
    <fullName>Date_Referred_To_Brightwell__c</fullName>
    <label>Date Referred To Brightwell</label>
    <type>Date</type>
</CustomField>