force-app/main/default/objects/Patient__c/fields/Date_RPM_Enrolled_In_Thoroughcare__c.field-meta.xml
<CustomField>
    <fullName>Date_RPM_Enrolled_In_Thoroughcare__c</fullName>
    <label>Date RPM Enrolled In Thoroughcare</label>
    <type>Date</type>
</CustomField>