force-app/main/default/objects/Patient__c/fields/Date_Sent_To_Wellsky__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent_To_Wellsky__c</fullName>
    <label>Date Sent To Wellsky</label>
    <type>DateTime</type>
</CustomField>