force-app/main/default/objects/Patient__c/fields/Date_Thoroughcare_Comm_Discharge_Updated__c.field-meta.xml
<CustomField>
    <fullName>Date_Thoroughcare_Comm_Discharge_Updated__c</fullName>
    <label>Date Thoroughcare Comm Discharge Updated</label>
    <type>Date</type>
</CustomField>