force-app/main/default/objects/Patient__c/fields/Date_Thoroughcare_Phone_Updated__c.field-meta.xml
<CustomField>
    <fullName>Date_Thoroughcare_Phone_Updated__c</fullName>
    <label>Date Thoroughcare Phone Updated</label>
    <type>Date</type>
</CustomField>