force-app/main/default/objects/Patient__c/fields/Deleted_In_Thoroughcare__c.field-meta.xml
<CustomField>
    <fullName>Deleted_In_Thoroughcare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deleted In Thoroughcare</label>
    <type>Checkbox</type>
</CustomField>