force-app/main/default/objects/Patient__c/fields/Discharge_After_Call_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Discharge_After_Call_Outcome__c</fullName>
    <formula>Latest_Discharge_Date__c -  Latest_Call_Outcome__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discharge After Call Outcome</label>
    <type>Checkbox</type>
</CustomField>