force-app/main/default/objects/Patient__c/fields/Discharged_Home__c.field-meta.xml
<CustomField>
    <fullName>Discharged_Home__c</fullName>
    <formula>if(
or(
contains( Facility__r.Parent_Company__r.Name , &quot;GHC&quot;),
contains( Facility__r.Parent_Company__r.Name , &quot;Infinity Healthcare&quot;),
contains( Facility__r.Parent_Company__r.Name , &quot;Continuum&quot;),
contains( Facility__r.Parent_Company__r.Name , &quot;Complete Care&quot;)),
Latest_Discharge__r.Discharged_Home__c,
if(
isblank( Insurance__c ),
false,
if(
contains(lower(Latest_Payer_Verification_Scenario__c), &quot;non payer&quot;),
false,
Latest_Discharge__r.Discharged_Home__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discharged Home</label>
    <type>Checkbox</type>
</CustomField>