force-app/main/default/objects/Patient__c/fields/Do_Not_Add_To_Thoroughcare__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Add_To_Thoroughcare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Add To Thoroughcare</label>
    <type>Checkbox</type>
</CustomField>