force-app/main/default/objects/Patient__c/fields/Don_t_Update_Medicaid_Number__c.field-meta.xml
<CustomField>
    <fullName>Don_t_Update_Medicaid_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Don&apos;t Update Medicaid Number</label>
    <type>Checkbox</type>
</CustomField>