force-app/main/default/objects/Patient__c/fields/Eligible_For_TCM_Initial_Date__c.field-meta.xml
<CustomField>
    <fullName>Eligible_For_TCM_Initial_Date__c</fullName>
    <label>Eligible For TCM Initial Date</label>
    <type>Date</type>
</CustomField>