force-app/main/default/objects/Patient__c/fields/Facilities_Name_Id__c.field-meta.xml
<CustomField>
    <fullName>Facilities_Name_Id__c</fullName>
    <formula>Facility__r.Name &amp; &quot; - &quot; &amp; CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facilities Name Id</label>
    <type>Text</type>
</CustomField>