force-app/main/default/objects/Patient__c/fields/Facility_Code_Resident_Id__c.field-meta.xml
<CustomField>
    <fullName>Facility_Code_Resident_Id__c</fullName>
    <formula>IF(AND(NOT(ISBLANK( Facility__r.PCC_Facility_Code__c )),  NOT(ISBLANK(PCC_Resident_Id__c ))), Facility__r.PCC_Facility_Code__c &amp; &quot;-&quot; &amp; PCC_Resident_Id__c,&quot;&quot;)</formula>
    <label>Facility Code Resident Id</label>
    <type>Text</type>
</CustomField>