force-app/main/default/objects/Patient__c/fields/Facility_Consent_Override_Name__c.field-meta.xml
<CustomField>
    <fullName>Facility_Consent_Override_Name__c</fullName>
    <label>Facility Consent Override Name</label>
    <type>TextArea</type>
</CustomField>