force-app/main/default/objects/Patient__c/fields/Facility_Override_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Facility_Override_Job_Title__c</fullName>
    <label>Facility Override Job Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Facility_Override_Job_Title</valueSetName>
    </valueSet>
</CustomField>