force-app/main/default/objects/Patient__c/fields/Facility_Status__c.field-meta.xml
<CustomField>
    <fullName>Facility_Status__c</fullName>
    <label>Facility Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Re-Admitted</fullName>
            </value>
            <value>
                <fullName>New Patient</fullName>
            </value>
            <value>
                <fullName>Discharged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>