force-app/main/default/objects/Patient__c/fields/First_Name_Id__c.field-meta.xml
<CustomField>
    <fullName>First_Name_Id__c</fullName>
    <formula>First_Name__c &amp; &quot; - &quot; &amp; CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Name Id</label>
    <type>Text</type>
</CustomField>