force-app/main/default/objects/Patient__c/fields/Full_Owner_Role_ID__c.field-meta.xml
<CustomField>
    <fullName>Full_Owner_Role_ID__c</fullName>
    <formula>Owner:User.Full_Role_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Owner Role ID</label>
    <type>Text</type>
</CustomField>