force-app/main/default/objects/Patient__c/fields/Gehrimed_Id__c.field-meta.xml
<CustomField>
    <fullName>Gehrimed_Id__c</fullName>
    <label>Gehrimed Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>