force-app/main/default/objects/Patient__c/fields/Gehrimed_Lookup_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Gehrimed_Lookup_DateTime__c</fullName>
    <label>Gehrimed Lookup DateTime</label>
    <type>DateTime</type>
</CustomField>