force-app/main/default/objects/Patient__c/fields/Greater_Than_First_Visit__c.field-meta.xml
<CustomField>
    <fullName>Greater_Than_First_Visit__c</fullName>
    <formula>IF( NOT(ISBLANK(Latest_Multi_Visit_DateTime__c)), TRUE, FALSE)</formula>
    <label>Greater Than First Visit</label>
    <type>Checkbox</type>
</CustomField>