force-app/main/default/objects/Patient__c/fields/Had_TCM_Visit__c.field-meta.xml
<CustomField>
    <fullName>Had_TCM_Visit__c</fullName>
    <formula>or(
not(isblank( Won_Date_Time__c )),
text( Community_Status__c ) = &quot;Closed Won&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Had TCM Visit</label>
    <type>Checkbox</type>
</CustomField>