force-app/main/default/objects/Patient__c/fields/Has_Initial_Visit__c.field-meta.xml
<CustomField>
    <fullName>Has_Initial_Visit__c</fullName>
    <formula>IF( OR(Count_of_Initial_VIsits__c &gt; 0, Prior_Initial_Visit__c ), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Initial Visit</label>
    <type>Checkbox</type>
</CustomField>