force-app/main/default/objects/Patient__c/fields/Has_Medicare_Advantage_Plan__c.field-meta.xml
<CustomField>
    <fullName>Has_Medicare_Advantage_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Medicare Advantage Plan</label>
    <type>Checkbox</type>
</CustomField>