force-app/main/default/objects/Patient__c/fields/Hospice__c.field-meta.xml
<CustomField>
    <fullName>Hospice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hospice</label>
    <type>Checkbox</type>
</CustomField>