force-app/main/default/objects/Patient__c/fields/Hospice_Company__c.field-meta.xml
<CustomField>
    <fullName>Hospice_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hospice Company</label>
    <referenceTo>Hospice__c</referenceTo>
    <relationshipLabel>Patients</relationshipLabel>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>