force-app/main/default/objects/Patient__c/fields/Hospice_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Hospice_Start_Date__c</fullName>
    <label>Hospice Start Date</label>
    <type>Date</type>
</CustomField>