force-app/main/default/objects/Patient__c/fields/In_Thoroughcare__c.field-meta.xml
<CustomField>
    <fullName>In_Thoroughcare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Thoroughcare</label>
    <type>Checkbox</type>
</CustomField>