force-app/main/default/objects/Patient__c/fields/Initial_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Visit_Date__c</fullName>
    <label>Initial Visit Date</label>
    <type>Date</type>
</CustomField>