force-app/main/default/objects/Patient__c/fields/Insurance_1__c.field-meta.xml
<CustomField>
    <fullName>Insurance_1__c</fullName>
    <label>Insurance #1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>