force-app/main/default/objects/Patient__c/fields/Insurance_1_Plan__c.field-meta.xml
<CustomField>
    <fullName>Insurance_1_Plan__c</fullName>
    <label>Insurance 1 Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>