force-app/main/default/objects/Patient__c/fields/Insurance_2__c.field-meta.xml
<CustomField>
    <fullName>Insurance_2__c</fullName>
    <label>Insurance #2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>