force-app/main/default/objects/Patient__c/fields/Insurance_3__c.field-meta.xml
<CustomField>
    <fullName>Insurance_3__c</fullName>
    <label>Insurance #3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>