force-app/main/default/objects/Patient__c/fields/Insurance_Status__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Status__c</fullName>
    <formula>if(
isblank( Insurance__c ),
&quot;No Insurance&quot;,
&quot;Has Insurance&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Status</label>
    <type>Text</type>
</CustomField>