force-app/main/default/objects/Patient__c/fields/Insurance_Verified_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Verified_Date_Time__c</fullName>
    <label>Insurance Verified Date/Time</label>
    <type>DateTime</type>
</CustomField>