force-app/main/default/objects/Patient__c/fields/Is_Eligible_For_Another_Initial_Visit__c.field-meta.xml
<CustomField>
    <fullName>Is_Eligible_For_Another_Initial_Visit__c</fullName>
    <formula>Date_Eligible_For_Another_Initial_Visit__c &gt; DATEVALUE(Latest_Visit_DateTime__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Eligible For Another Initial Visit</label>
    <type>Checkbox</type>
</CustomField>