force-app/main/default/objects/Patient__c/fields/Is_Facility_Override__c.field-meta.xml
<CustomField>
    <fullName>Is_Facility_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Facility Override</label>
    <type>Checkbox</type>
</CustomField>