force-app/main/default/objects/Patient__c/fields/ISNP__c.field-meta.xml
<CustomField>
    <fullName>ISNP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ISNP</label>
    <referenceTo>ISNP__c</referenceTo>
    <relationshipLabel>Patients</relationshipLabel>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>