force-app/main/default/objects/Patient__c/fields/Last_SMS_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_SMS_Sent_Date__c</fullName>
    <label>Last SMS Sent Date</label>
    <type>DateTime</type>
</CustomField>