force-app/main/default/objects/Patient__c/fields/Latest_Admission__c.field-meta.xml
<CustomField>
    <fullName>Latest_Admission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Admission</label>
    <referenceTo>Admission_Discharge__c</referenceTo>
    <relationshipLabel>Patients</relationshipLabel>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>