force-app/main/default/objects/Patient__c/fields/Latest_Call_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Latest_Call_Outcome__c</fullName>
    <label>Latest Call Outcome</label>
    <type>Date</type>
</CustomField>