force-app/main/default/objects/Patient__c/fields/Latest_COCM_Eligible_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Latest_COCM_Eligible_DateTime__c</fullName>
    <label>Latest_COCM_Eligible_DateTime</label>
    <type>DateTime</type>
</CustomField>