force-app/main/default/objects/Patient__c/fields/Latest_Discharge__c.field-meta.xml
<CustomField>
    <fullName>Latest_Discharge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Discharge</label>
    <referenceTo>Admission_Discharge__c</referenceTo>
    <relationshipLabel>Patients (Latest Discharge)</relationshipLabel>
    <relationshipName>Patients1</relationshipName>
    <type>Lookup</type>
</CustomField>